--- a/iOS/Drop.iOS.csproj
+++ b/iOS/Drop.iOS.csproj
@@ -122,6 +122,8 @@
     <Reference Include="Google.Maps">
       <HintPath>..\packages\Xamarin.Google.iOS.Maps.2.1.0\lib\Xamarin.iOS10\Google.Maps.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
@@ -169,6 +171,13 @@
     <Compile Include="Controllers\DropDetailViewController.designer.cs">
       <DependentUpon>DropDetailViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\DropLocationViewController.cs" />
+    <Compile Include="Controllers\DropLocationViewController.designer.cs">
+      <DependentUpon>DropLocationViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\LocationPrediction.cs" />
+    <Compile Include="ViewModel\LocationAutoCompleteTableSource.cs" />
+    <Compile Include="ViewModel\RestRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <XamarinComponentReference Include="parse">
@@ -239,6 +248,7 @@
     <BundleResource Include="Resources\icon_favorite.png" />
     <BundleResource Include="Resources\icon_link.png" />
     <BundleResource Include="Resources\icon_video.png" />
+    <BundleResource Include="Resources\icon_location.png" />
   </ItemGroup>
   <Import Project="..\Drop\Drop.projitems" Label="Shared" Condition="Exists('..\Drop\Drop.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
