--- a/Droid/Drop.Droid.csproj
+++ b/Droid/Drop.Droid.csproj
@@ -45,31 +45,110 @@
     <Reference Include="Parse.Android">
       <HintPath>..\Components\parse-1.7.0\lib\android\Parse.Android.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation">
+      <HintPath>..\packages\FluentValidation.6.2.1.0\lib\portable-net45+wp80+win8+wpa81\FluentValidation.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="AndHUD">
+      <HintPath>..\Components\AndHUD-1.3.1\lib\android\AndHUD.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Activities\SplashActivity.cs" />
+    <Compile Include="Activities\BaseActivity.cs" />
+    <Compile Include="Activities\LoginActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml" />
     <AndroidResource Include="Resources\values\Strings.xml" />
-    <AndroidResource Include="Resources\mipmap-hdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
+    <AndroidResource Include="Resources\drawable\bar_top.png" />
+    <AndroidResource Include="Resources\drawable\bg_blue.png" />
+    <AndroidResource Include="Resources\drawable\bg_blue1.png" />
+    <AndroidResource Include="Resources\drawable\bg_blue2.png" />
+    <AndroidResource Include="Resources\drawable\bg_bottom_orange.png" />
+    <AndroidResource Include="Resources\drawable\bg_colleps.png" />
+    <AndroidResource Include="Resources\drawable\bg_date.png" />
+    <AndroidResource Include="Resources\drawable\bg_drop_detail.png" />
+    <AndroidResource Include="Resources\drawable\bg_home_btn_content.png" />
+    <AndroidResource Include="Resources\drawable\bg_home_btn.png" />
+    <AndroidResource Include="Resources\drawable\bg_orange.png" />
+    <AndroidResource Include="Resources\drawable\bg_pw.png" />
+    <AndroidResource Include="Resources\drawable\bg_textfield.png" />
+    <AndroidResource Include="Resources\drawable\bg_tool_button.png" />
+    <AndroidResource Include="Resources\drawable\bg.png" />
+    <AndroidResource Include="Resources\drawable\btn_back.png" />
+    <AndroidResource Include="Resources\drawable\btn_drop_item.png" />
+    <AndroidResource Include="Resources\drawable\btn_drop_nearby.png" />
+    <AndroidResource Include="Resources\drawable\btn_right.png" />
+    <AndroidResource Include="Resources\drawable\icon_audio.png" />
+    <AndroidResource Include="Resources\drawable\icon_check.png" />
+    <AndroidResource Include="Resources\drawable\icon_colleps.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop_setting.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop1.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop2.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop3.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop4.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop5.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop6.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop7.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop8.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop9.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop10.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop11.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop12.png" />
+    <AndroidResource Include="Resources\drawable\icon_drop13.png" />
+    <AndroidResource Include="Resources\drawable\icon_expend.png" />
+    <AndroidResource Include="Resources\drawable\icon_favorite.png" />
+    <AndroidResource Include="Resources\drawable\icon_image_sel.png" />
+    <AndroidResource Include="Resources\drawable\icon_image_unsel.png" />
+    <AndroidResource Include="Resources\drawable\icon_link_sel.png" />
+    <AndroidResource Include="Resources\drawable\icon_link_unsel.png" />
+    <AndroidResource Include="Resources\drawable\icon_link.png" />
+    <AndroidResource Include="Resources\drawable\icon_location.png" />
+    <AndroidResource Include="Resources\drawable\icon_lock.png" />
+    <AndroidResource Include="Resources\drawable\icon_minus.png" />
+    <AndroidResource Include="Resources\drawable\icon_plus.png" />
+    <AndroidResource Include="Resources\drawable\icon_share_fb.png" />
+    <AndroidResource Include="Resources\drawable\icon_share_ins.png" />
+    <AndroidResource Include="Resources\drawable\icon_share_mail.png" />
+    <AndroidResource Include="Resources\drawable\icon_share_tw.png" />
+    <AndroidResource Include="Resources\drawable\icon_smile.png" />
+    <AndroidResource Include="Resources\drawable\icon_text_sel.png" />
+    <AndroidResource Include="Resources\drawable\icon_text_unsel.png" />
+    <AndroidResource Include="Resources\drawable\icon_uncheck.png" />
+    <AndroidResource Include="Resources\drawable\icon_video_sel.png" />
+    <AndroidResource Include="Resources\drawable\icon_video_unsel.png" />
+    <AndroidResource Include="Resources\drawable\icon_video.png" />
+    <AndroidResource Include="Resources\drawable\Splash.png" />
+    <AndroidResource Include="Resources\values\style.axml" />
+    <AndroidResource Include="Resources\layout\LoginActivity.axml" />
   </ItemGroup>
   <ItemGroup>
     <XamarinComponentReference Include="parse">
       <Version>1.7.0</Version>
       <Visible>False</Visible>
     </XamarinComponentReference>
+    <XamarinComponentReference Include="AndHUD">
+      <Version>1.3.1</Version>
+      <Visible>False</Visible>
+    </XamarinComponentReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\drawable\" />
+    <Folder Include="Activities\" />
   </ItemGroup>
   <Import Project="..\Drop\Drop.projitems" Label="Shared" Condition="Exists('..\Drop\Drop.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
