--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Bolts" version="1.4.0.1" targetFramework="monoandroid60" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
+  <package id="Xam.Plugins.Android.ExoPlayer" version="1.5.8" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Facebook.Android" version="4.16.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Facebook.AudienceNetwork.Android" version="4.16.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.GooglePlayServices.Ads" version="29.0.0.2" targetFramework="monoandroid60" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="29.0.0.2" targetFramework="monoandroid60" />
 </packages>
