--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -8,4 +8,5 @@
   <package id="Xamarin.Build.Download" version="0.2.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Facebook.iOS" version="4.16.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Google.iOS.Maps" version="2.1.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.SDWebImage" version="3.7.5" targetFramework="xamarinios10" />
 </packages>
