--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -5,6 +5,7 @@
   <package id="MvvmLight" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="Plugin.Share" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Build.Download" version="0.2.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Facebook.iOS" version="4.16.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Google.iOS.Maps" version="2.1.0" targetFramework="xamarinios10" />
