--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,26 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bolts" version="1.4.0.1" targetFramework="monoandroid60" />
-  <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
-  <package id="FluentValidation" version="6.2.1.0" targetFramework="monoandroid60" />
-  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
-  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
-  <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid60" />
-  <package id="Plugin.Share" version="3.0.1" targetFramework="monoandroid70" />
-  <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="monoandroid60" />
-  <package id="Xam.Plugins.Android.ExoPlayer" version="1.5.8" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.CustomTabs" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Facebook.Android" version="4.16.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Facebook.AudienceNetwork.Android" version="4.16.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.GooglePlayServices.Ads" version="29.0.0.2" targetFramework="monoandroid60" />
-  <package id="Xamarin.GooglePlayServices.Base" version="29.0.0.2" targetFramework="monoandroid60" />
-  <package id="Xamarin.GooglePlayServices.Basement" version="29.0.0.2" targetFramework="monoandroid60" />
-  <package id="Xamarin.GooglePlayServices.Maps" version="29.0.0.2" targetFramework="monoandroid60" />
+  <package id="Bolts" version="1.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="MonoAndroid60" />
+  <package id="FluentValidation" version="6.2.1.0" targetFramework="monoandroid403" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="MonoAndroid60" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="MonoAndroid60" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="MonoAndroid60" />
+  <package id="Plugin.Permissions" version="1.2.1" targetFramework="MonoAndroid60" />
+  <package id="Plugin.Share" version="3.0.1" targetFramework="MonoAndroid70" />
+  <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="MonoAndroid60" />
+  <package id="Xam.Plugins.Android.ExoPlayer" version="1.5.8" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="23.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Facebook.Android" version="4.16.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Facebook.AudienceNetwork.Android" version="4.16.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Ads" version="29.0.0.2" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Base" version="29.0.0.2" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="29.0.0.2" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="29.0.0.2" targetFramework="monoandroid70" />
 </packages>
