--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -22,5 +22,9 @@
 	<uses-permission android:name="android.permission.READ_CALENDAR" />
 	<uses-permission android:name="android.permission.WRITE_CALENDAR" />
 	<uses-permission android:name="com.android.vending.BILLING" />
+
+<!--	<uses-feature android:name="android.hardware.camera" />-->
+<!--<uses-feature android:name="android.hardware.camera.autofocus" />-->
+	
 	<application android:icon="@drawable/AppIcon" android:hardwareAccelerated="true" android:largeHeap="true" android:label="DigiCache"></application>
 </manifest>
